--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,9 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <properties>
-        <java.version>11</java.version>
-    </properties>
-
     <modules>
         <module>course</module>
+        <module>core</module>
     </modules>
 
     <dependencies>
