--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -17,12 +17,23 @@
     <properties>
         <java.version>11</java.version>
         <core.version>1.0-SNAPSHOT</core.version>
+        <token.version>1.0-SNAPSHOT</token.version>
     </properties>
 
     <dependencies>
         <dependency>
+            <groupId>wendergalan.github.io</groupId>
+            <artifactId>token</artifactId>
+            <version>${token.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>wendergalan.github.io</groupId>
+            <artifactId>core</artifactId>
+            <version>${core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -31,8 +42,9 @@
         </dependency>
         <dependency>
             <groupId>wendergalan.github.io</groupId>
-            <artifactId>core</artifactId>
-            <version>${core.version}</version>
+            <artifactId>token</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
