--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -16,9 +16,21 @@
 
     <properties>
         <java.version>11</java.version>
+        <core.version>1.0-SNAPSHOT</core.version>
+        <token.version>1.0-SNAPSHOT</token.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>wendergalan.github.io</groupId>
+            <artifactId>token</artifactId>
+            <version>${token.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>wendergalan.github.io</groupId>
+            <artifactId>core</artifactId>
+            <version>${core.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
