--- a/course/pom.xml
+++ b/course/pom.xml
@@ -16,13 +16,20 @@
 
     <properties>
         <java.version>11</java.version>
+        <core.version>1.0-SNAPSHOT</core.version>
+        <token.version>1.0-SNAPSHOT</token.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>wendergalan.github.io</groupId>
+            <artifactId>token</artifactId>
+            <version>${token.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>wendergalan.github.io</groupId>
             <artifactId>core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${core.version}</version>
         </dependency>
     </dependencies>
 
